# tagfilterDB

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  fileHeap.txt  schema.sql  test.cpp
.github/workflows/: doxygen-gh-pages.yml
appication/: package-lock.json  package.json
appication/src/: App.js
docs/html/: README_8md.html  annotated.html  box_8hpp.html  box_8hpp__incl.dot  box_8hpp_source.html  broundingbox_8h.html  broundingbox_8h__dep__incl.dot  broundingbox_8h__incl.dot  broundingbox_8h_source.html  cache_8h.html  cache_8h__dep__incl.dot  cache_8h__incl.dot  cache_8h_source.html  cache__example_8h.html  cache__example_8h__incl.dot  cache__example_8h_source.html  classes.html  classtagfilterdb_1_1BoundingBox-members.html  classtagfilterdb_1_1BoundingBox.html  classtagfilterdb_1_1DataRecord-members.html  classtagfilterdb_1_1DataRecord.html  classtagfilterdb_1_1FileManager-members.html  classtagfilterdb_1_1FileManager.html  classtagfilterdb_1_1ISIndexCallback-members.html  classtagfilterdb_1_1ISIndexCallback.html  classtagfilterdb_1_1LRUCache-members.html  classtagfilterdb_1_1LRUCache.html  classtagfilterdb_1_1LRUCache_1_1BucketNode-members.html  classtagfilterdb_1_1LRUCache_1_1BucketNode.html  classtagfilterdb_1_1LRUCache_1_1BucketNode__coll__graph.dot  classtagfilterdb_1_1LRUCache_1_1BucketNode__inherit__graph.dot  classtagfilterdb_1_1LRUCache_1_1BucketValueNode-members.html  classtagfilterdb_1_1LRUCache_1_1BucketValueNode.html  classtagfilterdb_1_1LRUCache_1_1BucketValueNode__coll__graph.dot  classtagfilterdb_1_1LRUCache_1_1BucketValueNode__inherit__graph.dot  classtagfilterdb_1_1LRUCache_1_1CacheMux-members.html  classtagfilterdb_1_1LRUCache_1_1CacheMux.html  classtagfilterdb_1_1LRUCache_1_1Referenceable-members.html  classtagfilterdb_1_1LRUCache_1_1Referenceable.html  classtagfilterdb_1_1LRUCache_1_1Referenceable__inherit__graph.dot  (+108 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+30 more)
docs/latex/: annotated.tex  box_8hpp.tex  box_8hpp.tex.tmp  box_8hpp__incl.dot  broundingbox_8h.tex  broundingbox_8h.tex.tmp  broundingbox_8h__dep__incl.dot  broundingbox_8h__incl.dot  broundingbox_8h_source.tex  cache_8h.tex  cache_8h__dep__incl.dot  cache_8h__incl.dot  cache_8h_source.tex  cache__example_8h.tex  cache__example_8h__incl.dot  cache__example_8h_source.tex  classtagfilterdb_1_1BoundingBox.tex  classtagfilterdb_1_1DataRecord.tex  classtagfilterdb_1_1FileManager.tex  classtagfilterdb_1_1ISIndexCallback.tex  classtagfilterdb_1_1LRUCache.tex  classtagfilterdb_1_1LRUCache_1_1BucketNode.tex  classtagfilterdb_1_1LRUCache_1_1BucketNode__coll__graph.dot  classtagfilterdb_1_1LRUCache_1_1BucketNode__inherit__graph.dot  classtagfilterdb_1_1LRUCache_1_1BucketValueNode.tex  classtagfilterdb_1_1LRUCache_1_1BucketValueNode__coll__graph.dot  classtagfilterdb_1_1LRUCache_1_1BucketValueNode__inherit__graph.dot  classtagfilterdb_1_1LRUCache_1_1CacheMux.tex  classtagfilterdb_1_1LRUCache_1_1Referenceable.tex  classtagfilterdb_1_1LRUCache_1_1Referenceable__inherit__graph.dot  classtagfilterdb_1_1LRUConfig.tex  classtagfilterdb_1_1OperationResult.tex  classtagfilterdb_1_1OperationResult__coll__graph.dot  classtagfilterdb_1_1ShareLRUCache.tex  classtagfilterdb_1_1ShareLRUConfig.tex  classtagfilterdb_1_1SpatialIndex.tex  classtagfilterdb_1_1Status.tex  classtagfilterdb_1_1support_1_1MurmurHash.tex  code_8hpp.tex  code_8hpp__incl.dot  (+50 more)
include/: httplib.h  log.h  timer.h
include/leveldb/: comparator.h  db.h  dumpfile.h  env.h  iterator.h  options.h  slice.h  status.h  table.h  table_builder.h  write_batch.h
include/tagfilter/: status.hpp
include/tagfilterdb/: arena.h  bitset.h  broundingbox.h  cache.h  cache_example.h  code.hpp  common.hpp  dataView.h  exceptions.hpp  export.hpp  filemanager.h  filemanager_test.h  fixedPage.h  heapPage.h  jsonMgr.h  list.h  logging.hpp  memPool.h  memtable.h  murmurHash.h  option.hpp  page.h  pageH.h  random.h  record.h  service1.hpp  skiplist.h  skiplist_test.h  spatialIndex.h  speedTest.h  spi_example.h  status.cpp  status.hpp
include/tagfilterdb/RTree/: tree.hpp
include/tagfilterdb/compiler/: baseErrorListener.hpp  charStream.hpp  commonToken.cpp  commonToken.hpp  commontokenFactory.cpp  commontokenFactory.hpp  consoleErrorListener.cpp  consoleErrorListener.hpp  declarations.hpp  errorListener.hpp  inputStream.cpp  inputStream.hpp  (+20 more)
include/tincompiler/: LRcomplier.hpp  compiler.hpp
libs/: cmakelists.txt
port/: port.h  port_stdcxx.h
service/banking/: db.hpp  server.hpp  sql.hpp
service/house/: db.hpp  server.hpp
src/: CMakeLists.txt  cmakelists.txt  main.cpp  status.cpp  temp.h  temp2.h
test/: test.cpp
tests/: CMakeLists.txt  broundingbox_test.cpp  code_test.cpp  rangeSet_test.cpp  spatialIndex_test.cpp  status_test.cpp  test.cpp
util/: arena.h  cache.cpp  comparator.cpp  crc32c.cpp  crc32c.h  env.cpp  env_posix.cpp  env_posix_test_helper.h  no_destructor.h  posix_logger.h  random.h  status.cpp
(+130 files in other folders)
